correction w3c version tablette alpha

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
                     <i class="fa-solid fa-location-dot"></i>
                 </div>
                 <div>
-                    <input type="text"name="ville"value="Marseille,France">
+                    <input type="text" name="ville" value="Marseille,France">
                 </div>
                 <div id="button-search">
                     <button type="submit">Rechercher</button>
@@ -70,9 +70,9 @@
     </div>
     <main>
         <section id="hebergements">
-            <div id="titre-hebergement"><h1> Hébergement à Marseille</h1></div>
+            <div id="titre-hebergement"> <h1> Hébergement à Marseille</h1></div>
             <div id="annonce-hebergement">
-                <a class="lien-card-hebergement"href="#">
+                <a class="lien-card-hebergement " href="#">
                     <div class="card-hebergement">
                         <div>
                             <img src="img/hebergements/4_small/marcus-loke-WQJvWU_HZFo-unsplash.jpg" alt="photo-auberge-la-canebiere">
@@ -86,11 +86,11 @@
                             <i class="fa-solid fa-star fa-2xs"></i>
                             <i class="fa-solid fa-star fa-2xs"></i>
                             <i class="fa-solid fa-star fa-2xs"></i>
-                            <i id="transparent"class="fa-regular fa-star fa-2xs"></i>
+                            <i class="transparent" class="fa-regular fa-star fa-2xs"></i>
                         </div>
                     </div>
                 </a>
-                <a class="lien-card-hebergement"href="#">
+                <a class="lien-card-hebergement" href="#">
                     <div class="card-hebergement">
                         <div>
                             <img src="img/hebergements/4_small/fred-kleber-gTbaxaVLvsg-unsplash.jpg" alt="photo-hotel-du-port">
@@ -104,11 +104,11 @@
                             <i class="fa-solid fa-star fa-2xs"></i>
                             <i class="fa-solid fa-star fa-2xs"></i>
                             <i class="fa-solid fa-star fa-2xs"></i>
-                            <i id="transparent"class="fa-regular fa-star fa-2xs"></i>
+                            <i class="transparent" class="fa-regular fa-star fa-2xs"></i>
                         </div>
                     </div>
                 </a>
-                <a class="lien-card-hebergement"href="#">
+                <a class="lien-card-hebergement" href="#">
                     <div class="card-hebergement">
                         <div>
                             <img src="img/hebergements/4_small/reisetopia-B8WIgxA_PFU-unsplash.jpg" alt="photo-hotel-les-mouettes">
@@ -122,11 +122,11 @@
                             <i class="fa-solid fa-star fa-2xs"></i>
                             <i class="fa-solid fa-star fa-2xs"></i>
                             <i class="fa-solid fa-star fa-2xs"></i>
-                            <i id="transparent"class="fa-regular fa-star fa-2xs"></i>
+                            <i class="transparent" class="fa-regular fa-star fa-2xs"></i>
                         </div>
                     </div>
                 </a>
-                <a class="lien-card-hebergement"href="#">
+                <a class="lien-card-hebergement" href="#">
                     <div class="card-hebergement">
                         <div>
                            <img src="img/hebergements/4_small/annie-spratt-Eg1qcIitAuA-unsplash.jpg" alt="photo-hotel-de-la-mer">
@@ -140,11 +140,11 @@
                             <i class="fa-solid fa-star fa-2xs"></i>
                             <i class="fa-solid fa-star fa-2xs"></i>
                             <i class="fa-solid fa-star fa-2xs"></i>
-                            <i id="transparent"class="fa-regular fa-star fa-2xs"></i>
+                            <i class="transparent" class="fa-regular fa-star fa-2xs"></i>
                         </div>
                     </div>
                 </a>
-                <a class="lien-card-hebergement"href="#">
+                <a class="lien-card-hebergement" href="#">
                     <div class="card-hebergement">
                         <div>
                             <img src="img/hebergements/4_small/nicate-lee-kT-ZyaiwBe0-unsplash.jpg" alt="photo-auberge-le-panier">
@@ -158,11 +158,11 @@
                             <i class="fa-solid fa-star fa-2xs"></i>
                             <i class="fa-solid fa-star fa-2xs"></i>
                             <i class="fa-solid fa-star fa-2xs"></i>
-                            <i id="transparent"class="fa-regular fa-star fa-2xs"></i>
+                            <i class="transparent" class="fa-regular fa-star fa-2xs"></i>
                         </div>
                     </div>
                 </a>
-                <a class="lien-card-hebergement"href="#">
+                <a class="lien-card-hebergement" href="#">
                     <div class="card-hebergement">
                         <div>
                             <img src="img/hebergements/4_small/febrian-zakaria-M6S1WvfW68A-unsplash.jpg" alt="photo-hotel-chez-Amima">
@@ -176,7 +176,7 @@
                             <i class="fa-solid fa-star fa-2xs"></i>
                             <i class="fa-solid fa-star fa-2xs"></i>
                             <i class="fa-solid fa-star fa-2xs"></i>
-                            <i id="transparent"class="fa-regular fa-star fa-2xs"></i>
+                            <i class="transparent" class="fa-regular fa-star fa-2xs"></i>
                         </div>
                     </div>
                 </a>
@@ -193,7 +193,7 @@
                 <i class="fa-solid fa-chart-line"></i>
             </div>
             <div id="annonce-populaires">
-                <a class="lien-card-populaires"href="#">
+                <a class="lien-card-populaires" href="#">
                     <div class="card-populaires">
                         <div>
                             <img src="img/hebergements/4_small/emile-guillemot-Bj_rcSC5XfE-unsplash.jpg" alt="photo-hotel-le-soleil-du-matin">
@@ -208,12 +208,12 @@
                                 <i class="fa-solid fa-star fa-2xs"></i>
                                 <i class="fa-solid fa-star fa-2xs"></i>
                                 <i class="fa-solid fa-star fa-2xs"></i>
-                                <i id="transparent"class="fa-regular fa-star fa-2xs"></i>
+                                <i class="transparent" class="fa-regular fa-star fa-2xs"></i>
                             </div>
                         </div>
                     </div> 
                 </a>
-                <a class="lien-card-populaires"href="#">
+                <a class="lien-card-populaires" href="#">
                     <div class="card-populaires">
                         <div>
                             <img src="img/hebergements/4_small/aw-creative-VGs8z60yT2c-unsplash.jpg" alt="photo-chambre-hotes-au-coeur-de-leau">
@@ -228,12 +228,12 @@
                                 <i class="fa-solid fa-star fa-2xs"></i>
                                 <i class="fa-solid fa-star fa-2xs"></i>
                                 <i class="fa-solid fa-star fa-2xs"></i>
-                                <i id="transparent"class="fa-regular fa-star fa-2xs"></i>
+                                <i class="transparent" class="fa-regular fa-star fa-2xs"></i>
                             </div>
                         </div>
                     </div> 
                 </a>
-                <a class="lien-card-populaires"href="#">
+                <a class="lien-card-populaires" href="#">
                     <div class="card-populaires">
                         <div>
                             <img src="img/hebergements/4_small/febrian-zakaria-sjvU0THccQA-unsplash.jpg" alt="photo-hotel-bleu-et-blanc">
@@ -248,7 +248,7 @@
                                 <i class="fa-solid fa-star fa-2xs"></i>
                                 <i class="fa-solid fa-star fa-2xs"></i>
                                 <i class="fa-solid fa-star fa-2xs"></i>
-                                <i id="transparent"class="fa-regular fa-star fa-2xs"></i>
+                                <i class="transparent" class="fa-regular fa-star fa-2xs"></i>
                             </div>
                         </div>
                     </div> 
@@ -261,7 +261,7 @@
             <p>Activités à Marseille</p>
         </div>
         <div id="annonce-activites">
-            <a class="lien-card-activites"href="#">
+            <a class="lien-card-activites" href="#">
                 <div class="card-activites">
                     <div>
                         <img src="img/activites/4_small/reno-laithienne-QUgJhdY5Fyk-unsplash.jpg" alt="photo-du-vieux-port">
@@ -271,7 +271,7 @@
                     </div>
                 </div> 
             </a>
-            <a class="lien-card-activites"href="#">
+            <a class="lien-card-activites" href="#">
                 <div class="card-activites">
                     <div>
                         <img src="img/activites/4_small/paul-hermann-QFTrLdQIRhI-unsplash.jpg" alt="photo-fort-de-pomegues">
@@ -281,7 +281,7 @@
                     </div>
                 </div>
             </a>
-            <a class="lien-card-activites"href="#">
+            <a class="lien-card-activites" href="#">
                 <div class="card-activites">
                     <div>
                         <img src="img/activites/4_small/kilyan-sockalingum-NR8-cBCN3aI-unsplash.jpg" alt="photo-parc-national-des-calanques">
@@ -291,7 +291,7 @@
                     </div>
                 </div>
             </a>
-            <a class="lien-card-activites"href="#">
+            <a class="lien-card-activites" href="#">
                 <div class="card-activites">
                     <div>
                         <img src="img/activites/4_small/florian-wehde-xW9e8gdotxI-unsplash.jpg" alt="photo-de-notre-dame-de-la-garde">
@@ -305,26 +305,26 @@
         
     </section>
     <footer>
-        <div class="list1">
+        <div class="list">
+            <h3>À propos</h3>
             <ul class="a-propos">
-                <h3>À propos</h3>
-                <a href="#"><li>Fonctionnement du site</li></a>
-                <a href="#"><li>Conditions générales</li></a>
-                <a href="#"><li>Données et confidentialité</li></a>
+                <li><a href="#">Fonctionnement du site</a></li>
+                <li><a href="#">Conditions générales</a></li>
+                <li><a href="#">Données et confidentialité</a></li>
             </ul>
         </div>
-        <div class="list2">
+        <div class="list">
+            <h3>Nos hébergements</h3>
             <ul>
-                <h3>Nos hébergements</h3>
-                <a href="#"><li>Charte qualité</li></a>
-                <a href="#"><li>Proposer votre hôtel</li></a>
+                <li><a href="#">Charte qualité</a></li>
+                <li><a href="#">Proposer votre hôtel</a></li>
             </ul>
         </div>
-        <div class="list3">
+        <div class="list">
+            <h3>Assistance</h3>
             <ul>
-                <h3>Assistance</h3>
-                <a href="#"><li>Centre d"aide</li></a>
-                <a href="#"><li>Nous contacter</li></a>
+                <li><a href="#">Centre d"aide</a></li>
+                <li><a href="#">Nous contacter</a></li>
             </ul>
         </div>
     </footer>
