--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
                             <i class="fa-solid fa-star fa-2xs"></i>
                             <i class="fa-solid fa-star fa-2xs"></i>
                             <i class="fa-solid fa-star fa-2xs"></i>
-                            <i class="transparent" class="fa-regular fa-star fa-2xs"></i>
+                            <i id="transparent" class="fa-regular fa-star fa-2xs"></i>
                         </div>
                     </div>
                 </a>
@@ -104,7 +104,7 @@
                             <i class="fa-solid fa-star fa-2xs"></i>
                             <i class="fa-solid fa-star fa-2xs"></i>
                             <i class="fa-solid fa-star fa-2xs"></i>
-                            <i class="transparent" class="fa-regular fa-star fa-2xs"></i>
+                            <i id="transparent" class="fa-regular fa-star fa-2xs"></i>
                         </div>
                     </div>
                 </a>
@@ -122,7 +122,7 @@
                             <i class="fa-solid fa-star fa-2xs"></i>
                             <i class="fa-solid fa-star fa-2xs"></i>
                             <i class="fa-solid fa-star fa-2xs"></i>
-                            <i class="transparent" class="fa-regular fa-star fa-2xs"></i>
+                            <i id="transparent" class="fa-regular fa-star fa-2xs"></i>
                         </div>
                     </div>
                 </a>
@@ -140,7 +140,7 @@
                             <i class="fa-solid fa-star fa-2xs"></i>
                             <i class="fa-solid fa-star fa-2xs"></i>
                             <i class="fa-solid fa-star fa-2xs"></i>
-                            <i class="transparent" class="fa-regular fa-star fa-2xs"></i>
+                            <i id="transparent" class="fa-regular fa-star fa-2xs"></i>
                         </div>
                     </div>
                 </a>
@@ -158,7 +158,7 @@
                             <i class="fa-solid fa-star fa-2xs"></i>
                             <i class="fa-solid fa-star fa-2xs"></i>
                             <i class="fa-solid fa-star fa-2xs"></i>
-                            <i class="transparent" class="fa-regular fa-star fa-2xs"></i>
+                            <i id="transparent" class="fa-regular fa-star fa-2xs"></i>
                         </div>
                     </div>
                 </a>
@@ -176,7 +176,7 @@
                             <i class="fa-solid fa-star fa-2xs"></i>
                             <i class="fa-solid fa-star fa-2xs"></i>
                             <i class="fa-solid fa-star fa-2xs"></i>
-                            <i class="transparent" class="fa-regular fa-star fa-2xs"></i>
+                            <i id="transparent" class="fa-regular fa-star fa-2xs"></i>
                         </div>
                     </div>
                 </a>
@@ -208,7 +208,7 @@
                                 <i class="fa-solid fa-star fa-2xs"></i>
                                 <i class="fa-solid fa-star fa-2xs"></i>
                                 <i class="fa-solid fa-star fa-2xs"></i>
-                                <i class="transparent" class="fa-regular fa-star fa-2xs"></i>
+                                <i id="transparent" class="fa-regular fa-star fa-2xs"></i>
                             </div>
                         </div>
                     </div> 
@@ -228,7 +228,7 @@
                                 <i class="fa-solid fa-star fa-2xs"></i>
                                 <i class="fa-solid fa-star fa-2xs"></i>
                                 <i class="fa-solid fa-star fa-2xs"></i>
-                                <i class="transparent" class="fa-regular fa-star fa-2xs"></i>
+                                <i id="transparent" class="fa-regular fa-star fa-2xs"></i>
                             </div>
                         </div>
                     </div> 
@@ -248,7 +248,7 @@
                                 <i class="fa-solid fa-star fa-2xs"></i>
                                 <i class="fa-solid fa-star fa-2xs"></i>
                                 <i class="fa-solid fa-star fa-2xs"></i>
-                                <i class="transparent" class="fa-regular fa-star fa-2xs"></i>
+                                <i id="transparent" class="fa-regular fa-star fa-2xs"></i>
                             </div>
                         </div>
                     </div> 
