--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
         </nav>
     </header>
     <div id="before-main">
-        <div>
+        <div id="accroche">
             <h1>Trouver votre hébergement pour des vacances de rêve</h1>
             <p>En plein centre-ville ou pleine nature</p>
         </div>
@@ -35,8 +35,9 @@
                 <div id="map-marker">
                     <i class="fa-solid fa-location-dot"></i>
                 </div>
-                <div>
-                    <input type="text" name="ville" value="Marseille,France">
+                <input type="text" name="ville" value="Marseille,France">
+                <div id="button-search-mobil">
+                    <button type="submit"></button>
                 </div>
                 <div id="button-search">
                     <button type="submit">Rechercher</button>
