--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
                             <i class="fa-solid fa-star fa-2xs"></i>
                             <i class="fa-solid fa-star fa-2xs"></i>
                             <i class="fa-solid fa-star fa-2xs"></i>
-                            <i id="transparent" class="fa-regular fa-star fa-2xs"></i>
+                            <i class="fa-regular fa-star fa-2xs transparent"></i>
                         </div>
                     </div>
                 </a>
@@ -105,7 +105,7 @@
                             <i class="fa-solid fa-star fa-2xs"></i>
                             <i class="fa-solid fa-star fa-2xs"></i>
                             <i class="fa-solid fa-star fa-2xs"></i>
-                            <i id="transparent" class="fa-regular fa-star fa-2xs"></i>
+                            <i class="fa-regular fa-star fa-2xs transparent"></i>
                         </div>
                     </div>
                 </a>
@@ -123,7 +123,7 @@
                             <i class="fa-solid fa-star fa-2xs"></i>
                             <i class="fa-solid fa-star fa-2xs"></i>
                             <i class="fa-solid fa-star fa-2xs"></i>
-                            <i id="transparent" class="fa-regular fa-star fa-2xs"></i>
+                            <i class="fa-regular fa-star fa-2xs transparent"></i>
                         </div>
                     </div>
                 </a>
@@ -141,7 +141,7 @@
                             <i class="fa-solid fa-star fa-2xs"></i>
                             <i class="fa-solid fa-star fa-2xs"></i>
                             <i class="fa-solid fa-star fa-2xs"></i>
-                            <i id="transparent" class="fa-regular fa-star fa-2xs"></i>
+                            <i class="fa-regular fa-star fa-2xs transparent"></i>
                         </div>
                     </div>
                 </a>
@@ -159,7 +159,7 @@
                             <i class="fa-solid fa-star fa-2xs"></i>
                             <i class="fa-solid fa-star fa-2xs"></i>
                             <i class="fa-solid fa-star fa-2xs"></i>
-                            <i id="transparent" class="fa-regular fa-star fa-2xs"></i>
+                            <i class="fa-regular fa-star fa-2xs transparent"></i>
                         </div>
                     </div>
                 </a>
@@ -177,7 +177,7 @@
                             <i class="fa-solid fa-star fa-2xs"></i>
                             <i class="fa-solid fa-star fa-2xs"></i>
                             <i class="fa-solid fa-star fa-2xs"></i>
-                            <i id="transparent" class="fa-regular fa-star fa-2xs"></i>
+                            <i class="fa-regular fa-star fa-2xs transparent"></i>
                         </div>
                     </div>
                 </a>
@@ -209,7 +209,7 @@
                                 <i class="fa-solid fa-star fa-2xs"></i>
                                 <i class="fa-solid fa-star fa-2xs"></i>
                                 <i class="fa-solid fa-star fa-2xs"></i>
-                                <i id="transparent" class="fa-regular fa-star fa-2xs"></i>
+                                <i class="fa-regular fa-star fa-2xs transparent"></i>
                             </div>
                         </div>
                     </div> 
@@ -229,7 +229,7 @@
                                 <i class="fa-solid fa-star fa-2xs"></i>
                                 <i class="fa-solid fa-star fa-2xs"></i>
                                 <i class="fa-solid fa-star fa-2xs"></i>
-                                <i id="transparent" class="fa-regular fa-star fa-2xs"></i>
+                                <i class="fa-regular fa-star fa-2xs transparent"></i>
                             </div>
                         </div>
                     </div> 
@@ -249,7 +249,7 @@
                                 <i class="fa-solid fa-star fa-2xs"></i>
                                 <i class="fa-solid fa-star fa-2xs"></i>
                                 <i class="fa-solid fa-star fa-2xs"></i>
-                                <i id="transparent" class="fa-regular fa-star fa-2xs"></i>
+                                <i class="fa-regular fa-star fa-2xs transparent"></i>
                             </div>
                         </div>
                     </div> 
