--- a/index.html
+++ b/index.html
@@ -184,7 +184,7 @@
             </div>
             <div class="plus">
                 <div class="texte-plus">
-                    <a href="#"><p>Affichez plus </p></a>
+                    <a href="#"><p>Afficher plus </p></a>
                 </div>
             </div>
         </section>
