--- a/index.html
+++ b/index.html
@@ -184,8 +184,8 @@
                     </div>
                 </a>
             </div>
-            <div id="plus">
-                <div id="texte-plus">
+            <div class="plus">
+                <div class="texte-plus">
                     <a href="#"><p>Affichez plus </p></a>
                 </div>
             </div>
