mobil alpha merge to main

--- a/index.html
+++ b/index.html
@@ -35,9 +35,11 @@
                 <div id="map-marker">
                     <i class="fa-solid fa-location-dot"></i>
                 </div>
-                <input type="text" name="ville" value="Marseille, France">
+                <input type="text" name="ville" value="Marseille,France">
                 <div id="button-search-mobil">
-                    <button type="submit"></button>
+                    <button type="submit">
+                        <i class="fa-solid fa-magnifying-glass"></i>
+                    </button>
                 </div>
                 <div id="button-search">
                     <button type="submit">Rechercher</button>
@@ -83,11 +85,11 @@
                             <p>Nuit à partir de 25€</p>
                         </div>
                         <div class="etoile">
-                            <i class="fa-solid fa-star fa-2xs"></i>
-                            <i class="fa-solid fa-star fa-2xs"></i>
-                            <i class="fa-solid fa-star fa-2xs"></i>
-                            <i class="fa-solid fa-star fa-2xs"></i>
-                            <i class="fa-regular fa-star fa-2xs transparent"></i>
+                            <i class="fa-solid fa-star fa-xs"></i>
+                            <i class="fa-solid fa-star fa-xs"></i>
+                            <i class="fa-solid fa-star fa-xs"></i>
+                            <i class="fa-solid fa-star fa-xs"></i>
+                            <i class="fa-regular fa-star fa-xs transparent"></i>
                         </div>
                     </div>
                 </a>
@@ -101,11 +103,11 @@
                             <p>Nuit à partir de 52€</p>
                         </div>
                         <div class="etoile">
-                            <i class="fa-solid fa-star fa-2xs"></i>
-                            <i class="fa-solid fa-star fa-2xs"></i>
-                            <i class="fa-solid fa-star fa-2xs"></i>
-                            <i class="fa-solid fa-star fa-2xs"></i>
-                            <i class="fa-regular fa-star fa-2xs transparent"></i>
+                            <i class="fa-solid fa-star fa-xs"></i>
+                            <i class="fa-solid fa-star fa-xs"></i>
+                            <i class="fa-solid fa-star fa-xs"></i>
+                            <i class="fa-solid fa-star fa-xs"></i>
+                            <i class="fa-regular fa-star fa-xs transparent"></i>
                         </div>
                     </div>
                 </a>
@@ -119,11 +121,11 @@
                             <p>Nuit à partir de 76€</p>
                         </div>
                         <div class="etoile">
-                            <i class="fa-solid fa-star fa-2xs"></i>
-                            <i class="fa-solid fa-star fa-2xs"></i>
-                            <i class="fa-solid fa-star fa-2xs"></i>
-                            <i class="fa-solid fa-star fa-2xs"></i>
-                            <i class="fa-regular fa-star fa-2xs transparent"></i>
+                            <i class="fa-solid fa-star fa-xs"></i>
+                            <i class="fa-solid fa-star fa-xs"></i>
+                            <i class="fa-solid fa-star fa-xs"></i>
+                            <i class="fa-solid fa-star fa-xs"></i>
+                            <i class="fa-regular fa-star fa-xs transparent"></i>
                         </div>
                     </div>
                 </a>
@@ -137,11 +139,11 @@
                             <p>Nuit à partir de 46€</p>
                         </div>
                         <div class="etoile">
-                            <i class="fa-solid fa-star fa-2xs"></i>
-                            <i class="fa-solid fa-star fa-2xs"></i>
-                            <i class="fa-solid fa-star fa-2xs"></i>
-                            <i class="fa-solid fa-star fa-2xs"></i>
-                            <i class="fa-regular fa-star fa-2xs transparent"></i>
+                            <i class="fa-solid fa-star fa-xs"></i>
+                            <i class="fa-solid fa-star fa-xs"></i>
+                            <i class="fa-solid fa-star fa-xs"></i>
+                            <i class="fa-solid fa-star fa-xs"></i>
+                            <i class="fa-regular fa-star fa-xs transparent"></i>
                         </div>
                     </div>
                 </a>
@@ -155,11 +157,11 @@
                             <p>Nuit à partir de 23€</p>
                         </div>
                         <div class="etoile">
-                            <i class="fa-solid fa-star fa-2xs"></i>
-                            <i class="fa-solid fa-star fa-2xs"></i>
-                            <i class="fa-solid fa-star fa-2xs"></i>
-                            <i class="fa-solid fa-star fa-2xs"></i>
-                            <i class="fa-regular fa-star fa-2xs transparent"></i>
+                            <i class="fa-solid fa-star fa-xs"></i>
+                            <i class="fa-solid fa-star fa-xs"></i>
+                            <i class="fa-solid fa-star fa-xs"></i>
+                            <i class="fa-solid fa-star fa-xs"></i>
+                            <i class="fa-regular fa-star fa-xs transparent"></i>
                         </div>
                     </div>
                 </a>
@@ -173,17 +175,17 @@
                             <p>Nuit à partir de 96€</p>
                         </div>
                         <div class="etoile">
-                            <i class="fa-solid fa-star fa-2xs"></i>
-                            <i class="fa-solid fa-star fa-2xs"></i>
-                            <i class="fa-solid fa-star fa-2xs"></i>
-                            <i class="fa-solid fa-star fa-2xs"></i>
-                            <i class="fa-regular fa-star fa-2xs transparent"></i>
+                            <i class="fa-solid fa-star fa-xs"></i>
+                            <i class="fa-solid fa-star fa-xs"></i>
+                            <i class="fa-solid fa-star fa-xs"></i>
+                            <i class="fa-solid fa-star fa-xs"></i>
+                            <i class="fa-regular fa-star fa-xs transparent"></i>
                         </div>
                     </div>
                 </a>
             </div>
-            <div class="plus">
-                <div class="texte-plus">
+            <div id="plus">
+                <div id="texte-plus">
                     <a href="#"><p>Afficher plus </p></a>
                 </div>
             </div>
@@ -205,11 +207,11 @@
                                 <p>Nuit à partir de 128€</p>
                             </div>
                             <div class="etoile">
-                                <i class="fa-solid fa-star fa-2xs"></i>
-                                <i class="fa-solid fa-star fa-2xs"></i>
-                                <i class="fa-solid fa-star fa-2xs"></i>
-                                <i class="fa-solid fa-star fa-2xs"></i>
-                                <i class="fa-regular fa-star fa-2xs transparent"></i>
+                                <i class="fa-solid fa-star fa-xs"></i>
+                                <i class="fa-solid fa-star fa-xs"></i>
+                                <i class="fa-solid fa-star fa-xs"></i>
+                                <i class="fa-solid fa-star fa-xs"></i>
+                                <i class="fa-regular fa-star fa-xs transparent"></i>
                             </div>
                         </div>
                     </div> 
@@ -225,11 +227,11 @@
                                 <p>Nuit à partir de 71€</p>
                             </div>
                             <div class="etoile">
-                                <i class="fa-solid fa-star fa-2xs"></i>
-                                <i class="fa-solid fa-star fa-2xs"></i>
-                                <i class="fa-solid fa-star fa-2xs"></i>
-                                <i class="fa-solid fa-star fa-2xs"></i>
-                                <i class="fa-regular fa-star fa-2xs transparent"></i>
+                                <i class="fa-solid fa-star fa-xs"></i>
+                                <i class="fa-solid fa-star fa-xs"></i>
+                                <i class="fa-solid fa-star fa-xs"></i>
+                                <i class="fa-solid fa-star fa-xs"></i>
+                                <i class="fa-regular fa-star fa-xs transparent"></i>
                             </div>
                         </div>
                     </div> 
@@ -245,11 +247,11 @@
                                 <p>Nuit à partir de 68€</p>
                             </div>
                             <div class="etoile">
-                                <i class="fa-solid fa-star fa-2xs"></i>
-                                <i class="fa-solid fa-star fa-2xs"></i>
-                                <i class="fa-solid fa-star fa-2xs"></i>
-                                <i class="fa-solid fa-star fa-2xs"></i>
-                                <i class="fa-regular fa-star fa-2xs transparent"></i>
+                                <i class="fa-solid fa-star fa-xs"></i>
+                                <i class="fa-solid fa-star fa-xs"></i>
+                                <i class="fa-solid fa-star fa-xs"></i>
+                                <i class="fa-solid fa-star fa-xs"></i>
+                                <i class="fa-regular fa-star fa-xs transparent"></i>
                             </div>
                         </div>
                     </div> 
