--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
             <div id="titre-hebergement"> <h2> Hébergement à Marseille</h2></div>
             <div id="annonce-hebergement">
                 <a class="lien-card-hebergement " href="#">
-                    <div class="card-hebergement">
+                    <article class="card-hebergement">
                         <div>
                             <img src="img/hebergements/4_small/marcus-loke-WQJvWU_HZFo-unsplash.jpg" alt="photo-auberge-la-canebiere">
                         </div>
@@ -91,10 +91,10 @@
                             <i class="fa-solid fa-star fa-xs"></i>
                             <i class="fa-regular fa-star fa-xs transparent"></i>
                         </div>
-                    </div>
+                    </article>
                 </a>
                 <a class="lien-card-hebergement" href="#">
-                    <div class="card-hebergement">
+                    <article class="card-hebergement">
                         <div>
                             <img src="img/hebergements/4_small/fred-kleber-gTbaxaVLvsg-unsplash.jpg" alt="photo-hotel-du-port">
                         </div>
@@ -109,10 +109,10 @@
                             <i class="fa-solid fa-star fa-xs"></i>
                             <i class="fa-regular fa-star fa-xs transparent"></i>
                         </div>
-                    </div>
+                    </article>
                 </a>
                 <a class="lien-card-hebergement" href="#">
-                    <div class="card-hebergement">
+                    <article class="card-hebergement">
                         <div>
                             <img src="img/hebergements/4_small/reisetopia-B8WIgxA_PFU-unsplash.jpg" alt="photo-hotel-les-mouettes">
                         </div>
@@ -127,10 +127,10 @@
                             <i class="fa-solid fa-star fa-xs"></i>
                             <i class="fa-regular fa-star fa-xs transparent"></i>
                         </div>
-                    </div>
+                    </article>
                 </a>
                 <a class="lien-card-hebergement" href="#">
-                    <div class="card-hebergement">
+                    <article class="card-hebergement">
                         <div>
                            <img src="img/hebergements/4_small/annie-spratt-Eg1qcIitAuA-unsplash.jpg" alt="photo-hotel-de-la-mer">
                         </div>
@@ -145,10 +145,10 @@
                             <i class="fa-solid fa-star fa-xs"></i>
                             <i class="fa-regular fa-star fa-xs transparent"></i>
                         </div>
-                    </div>
+                    </article>
                 </a>
                 <a class="lien-card-hebergement" href="#">
-                    <div class="card-hebergement">
+                    <article class="card-hebergement">
                         <div>
                             <img src="img/hebergements/4_small/nicate-lee-kT-ZyaiwBe0-unsplash.jpg" alt="photo-auberge-le-panier">
                         </div>
@@ -163,10 +163,10 @@
                             <i class="fa-solid fa-star fa-xs"></i>
                             <i class="fa-regular fa-star fa-xs transparent"></i>
                         </div>
-                    </div>
+                    </article>
                 </a>
                 <a class="lien-card-hebergement" href="#">
-                    <div class="card-hebergement">
+                    <article class="card-hebergement">
                         <div>
                             <img src="img/hebergements/4_small/febrian-zakaria-M6S1WvfW68A-unsplash.jpg" alt="photo-hotel-chez-Amima">
                         </div>
@@ -181,7 +181,7 @@
                             <i class="fa-solid fa-star fa-xs"></i>
                             <i class="fa-regular fa-star fa-xs transparent"></i>
                         </div>
-                    </div>
+                    </article>
                 </a>
             </div>
             <div id="plus">
@@ -197,7 +197,7 @@
             </div>
             <div id="annonce-populaires">
                 <a class="lien-card-populaires" href="#">
-                    <div class="card-populaires">
+                    <article class="card-populaires">
                         <div>
                             <img src="img/hebergements/4_small/emile-guillemot-Bj_rcSC5XfE-unsplash.jpg" alt="photo-hotel-le-soleil-du-matin">
                         </div>
@@ -214,10 +214,10 @@
                                 <i class="fa-regular fa-star fa-xs transparent"></i>
                             </div>
                         </div>
-                    </div> 
+                    </article> 
                 </a>
                 <a class="lien-card-populaires" href="#">
-                    <div class="card-populaires">
+                    <article class="card-populaires">
                         <div>
                             <img src="img/hebergements/4_small/aw-creative-VGs8z60yT2c-unsplash.jpg" alt="photo-chambre-hotes-au-coeur-de-leau">
                         </div>
@@ -234,10 +234,10 @@
                                 <i class="fa-regular fa-star fa-xs transparent"></i>
                             </div>
                         </div>
-                    </div> 
+                    </article> 
                 </a>
                 <a class="lien-card-populaires" href="#">
-                    <div class="card-populaires">
+                    <article class="card-populaires">
                         <div>
                             <img src="img/hebergements/4_small/febrian-zakaria-sjvU0THccQA-unsplash.jpg" alt="photo-hotel-bleu-et-blanc">
                         </div>
@@ -254,7 +254,7 @@
                                 <i class="fa-regular fa-star fa-xs transparent"></i>
                             </div>
                         </div>
-                    </div> 
+                    </article> 
                 </a>
             </div>
         </section>
@@ -265,44 +265,44 @@
         </div>
         <div id="annonce-activites">
             <a class="lien-card-activites" href="#">
-                <div class="card-activites">
+                <article class="card-activites">
                     <div>
                         <img src="img/activites/4_small/reno-laithienne-QUgJhdY5Fyk-unsplash.jpg" alt="photo-du-vieux-port">
                     </div>
                     <div class="card-texte">
                         <h2>Vieux-Port</h2>
                     </div>
-                </div> 
+                </article> 
             </a>
             <a class="lien-card-activites" href="#">
-                <div class="card-activites">
+                <article class="card-activites">
                     <div>
                         <img src="img/activites/4_small/paul-hermann-QFTrLdQIRhI-unsplash.jpg" alt="photo-fort-de-pomegues">
                     </div>
                     <div class="card-texte">
                         <h2>Fort de Pomègues</h2>
                     </div>
-                </div>
+                </article>
             </a>
             <a class="lien-card-activites" href="#">
-                <div class="card-activites">
+                <article class="card-activites">
                     <div>
                         <img src="img/activites/4_small/kilyan-sockalingum-NR8-cBCN3aI-unsplash.jpg" alt="photo-parc-national-des-calanques">
                     </div>
                     <div class="card-texte">
                         <h2>Parc national des Calanques</h2>
                     </div>
-                </div>
+                </article>
             </a>
             <a class="lien-card-activites" href="#">
-                <div class="card-activites">
+                <article class="card-activites">
                     <div>
                         <img src="img/activites/4_small/florian-wehde-xW9e8gdotxI-unsplash.jpg" alt="photo-de-notre-dame-de-la-garde">
                     </div>
                     <div class="card-texte">
                         <h2>Notre-Dame-de-la-Garde</h2>
                     </div>
-                </div>
+                </article>
             </a>
         </div>
         
